// Vitest Snapshot v1

exports[`normalize-page > en-US getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "children": [
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "children": undefined,
              "hidden": undefined,
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "hidden": undefined,
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "children": undefined,
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "hidden": undefined,
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "hidden": undefined,
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "hidden": undefined,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "children": undefined,
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "hidden": undefined,
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "hidden": undefined,
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;
